# shfl-official-repository

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh  compress.bat  compress.sh  justcompress.bat  justcompress.sh  repo.json
.github/workflows/: build-dateandtime.yml  build-filesystem.yml  build-network.yml  build-textutilities.yml  build-unitconverter.yml  build.yml
cd/: help.shfl
cd/lib/: entrypoint.lua
cp/: help.shfl
cp/lib/: entrypoint.lua
dateandtime/: CMakeLists.txt  app.shfl
dateandtime/date/: CMakeLists.txt  lib.cpp
dateandtime/datediff/: CMakeLists.txt  lib.cpp
dateandtime/time/: CMakeLists.txt  lib.cpp
dir/: help.shfl
filesystem/: CMakeLists.txt  app.shfl
imageutilities/: app.shfl
libs-windows/: appmgr.lib  jsoncpp.lib  kubazip.lib  libcurl.lib  lua.lib  shuffle.lib  suggestion.lib  zlib.lib
list/: help.shfl  run.shfl
mk/: help.shfl
mv/: help.shfl
network/: CMakeLists.txt  app.shfl
rm/: help.shfl
subcommand-test/: app.shfl
textutilities/: CMakeLists.txt  app.shfl
unitconverter/: CMakeLists.txt  app.shfl
unitconverter/convertangle/: CMakeLists.txt  lib.cpp
unitconverter/convertdatavolume/: CMakeLists.txt  lib.cpp
unitconverter/convertenergy/: CMakeLists.txt  lib.cpp
unitconverter/convertlength/: CMakeLists.txt  lib.cpp
unitconverter/convertspeed/: CMakeLists.txt  lib.cpp
unitconverter/converttemperature/: CMakeLists.txt  lib.cpp
unitconverter/converttime/: CMakeLists.txt  lib.cpp
unitconverter/convertvolume/: CMakeLists.txt  lib.cpp
unitconverter/convertweight/: CMakeLists.txt  lib.cpp
(+61 files in other folders)
